# project

./: .gitattributes  .gitignore  README.md  app.py  build_db.py  build_db1.py  build_db2.py  pyproject.toml  requirements.txt
CMAPSSData/: RUL_FD001.csv  RUL_FD002.csv  RUL_FD003.csv  RUL_FD004.csv  preprocessed_test_FD001.csv  preprocessed_test_FD002.csv  preprocessed_test_FD003.csv  preprocessed_test_FD004.csv  test_FD001.csv  test_FD001.txt  test_FD001_preprocessed.csv  test_FD003.csv  test_FD003_preprocessed.csv  train_FD001.csv  train_FD003.csv
saved_models/: history_LightGBM_FD001.csv  history_LightGBM_FD002.csv  history_LightGBM_FD003.csv  history_LightGBM_FD004.csv  history_XGBoost_FD001.csv  history_XGBoost_FD002.csv  history_XGBoost_FD003.csv  history_XGBoost_FD004.csv  model_ElasticNet_FD001.pkl  model_Lasso_FD001.joblib  model_Lasso_FD001.pkl  model_Lasso_FD002.joblib  model_Lasso_FD002.pkl  model_Lasso_FD003.joblib  model_Lasso_FD003.pkl  model_Lasso_FD004.joblib  model_Lasso_FD004.pkl  model_LightGBM_FD001.joblib  model_LightGBM_FD001.pkl  model_LightGBM_FD002.joblib  model_LightGBM_FD002.pkl  model_LightGBM_FD003.joblib  model_LightGBM_FD003.pkl  model_LightGBM_FD004.joblib  model_LightGBM_FD004.pkl  model_Ridge_FD001.joblib  model_Ridge_FD001.pkl  model_Ridge_FD002.joblib  model_Ridge_FD002.pkl  model_Ridge_FD003.joblib  model_Ridge_FD003.pkl  model_Ridge_FD004.joblib  model_Ridge_FD004.pkl  model_XGBoost_FD001.joblib  model_XGBoost_FD001.pkl  model_XGBoost_FD002.joblib  model_XGBoost_FD002.pkl  model_XGBoost_FD003.pkl  model_XGBoost_FD004.joblib  (+28 more)
(+7 files in other folders)
