[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.2",
    "google-generativeai>=0.8.6",
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "nest-asyncio>=1.6.0",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "pydantic-ai>=1.94.0",
    "scikit-learn>=1.8.0",
    "shap>=0.51.0",
    "streamlit>=1.57.0",
    "xgboost>=3.2.0",
]
